# my-website-generator

./: Cargo.toml  LICENSE
resources/data/: nav.json  posts.json
resources/markdown/: 10.md  11.md  12.md  13.md  14.md  15.md  2.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
resources/templates/: archive.html  base.html  page.html  post.html
resources/templates/assets/: archive.css  custom.css  github-markdown-light.css
src/: main.rs
src/markdown/: mod.rs
src/markdown/core/: custom_code_parser.rs  front_matter.rs  mod.rs
src/markdown/core/code_highlight/: lang_transform.rs  mod.rs  parser.rs
src/page/: action2html.rs  action2md_html.rs  data.rs  mod.rs  render.rs
