[package]
name = "my-static-site-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.12.1"
syntect = "5.2.0"
gray_matter = "0.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
chrono = "0.4"
tera = "1.20"
fs_extra = "1.3"